<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="retryCallback"
            type="com.gojekgithub.trending.ui.callbacks.TrendingRetryListener" />
        <variable
            name="errorMsg"
            type="java.lang.String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/button_retry"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/nointernet_connection"
            tools:ignore="ContentDescription" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/trending_ui_spacing_md"
            android:layout_marginRight="@dimen/trending_ui_spacing_md"
            android:layout_marginTop="@dimen/trending_ui_spacing_xmd"
            android:gravity="center"
            android:textSize="@dimen/trending_ui_text_title"
            android:textColor="@color/trending_error_went_wrong_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_icon"
            android:text="@string/error" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/trending_ui_spacing_xlg"
            android:layout_marginRight="@dimen/trending_ui_spacing_xlg"
            android:layout_marginTop="@dimen/trending_ui_spacing_sm"
            android:gravity="center"
            android:textSize="@dimen/trending_ui_text_description"
            android:textColor="@color/trending_error_sub_text_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_title"
            android:text="@string/error_description" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_retry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/retry_bg"
            android:text="@string/retry"
            android:textColor="@color/trending_btn_retry_text_color"
            style="@style/AuthorText"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="@{() -> retryCallback.fetchData()}"
            android:layout_margin="@dimen/trending_ui_spacing_md" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>